# floyzone

./: .env.example  defang.toml  main.py  pyproject.toml  requirements.txt
agent/: openai_agent.py
config/: database.py
data/: faq.json
routes/: agent_route.py  auth_routes.py  booking_route.py
utils/: auth.py  hash.py  jwt_handler.py
validation/: user_validation.py
